# nextask

./: .gitignore  API.md  LICENSE  README.md  go.mod  go.sum  install  pyproject.toml  setup
.github/workflows/: release.yml
cmd/nextask/: main.go
doc/: API.md  CLI.md  demo.tape  examples.md  gendoc.go
internal/cli/: cancel.go  config.go  enqueue.go  init.go  list.go  logs.go  logs_test.go  remove.go  root.go  show.go  signal_test.go  table.go  wait.go  worker.go
internal/config/: config.go  config_test.go
internal/db/: db_test.go  events.go  listener.go  listener_test.go  models.go  notifier.go  postgres.go  queries.go  recovery_test.go  retry.go  retry_test.go
internal/db/migrations/: 001_init.sql  002_workers.sql  003_log_seq.sql  claim_task.sql  complete_task.sql  delete_task.sql  get_logs.sql  get_logs_since.sql  get_task.sql  insert_log.sql  list_workers.sql  migrations.go  register_worker.sql  request_cancel.sql  update_heartbeat.sql  (+1 more)
internal/source/: snapshot.go  snapshot_test.go
internal/worker/: cancel_test.go  executor.go  init_bash.go  initializer.go  initializer_test.go  logger.go  logger_test.go  source.go  source_git.go  source_test.go  stop_test.go  test_helpers_test.go  worker.go
nextask/: __init__.py  cli.py  models.py  queue.py
nextask/lua/: __init__.py  claim_next.lua  loader.py
scripts/: install.sh
skills/nextask/: SKILL.md
skills/nextask-setup-services/: SKILL.md
skills/nextask-setup-worker/: SKILL.md
tests/: test_atomic.py  test_basic.py  test_concurrency.py  test_edge_cases.py  test_integration.py  test_stress_atomic.py
(+6 files in other folders)
